binding pizza and toppings menu

--- a/pizza.html
+++ b/pizza.html
@@ -16,15 +16,13 @@
           <li><button id="load">LOAD PIZZA</button></li>
       </ul>
       <h3 class="menu-title">Toppings</h3>
-      <ul>
-          <li><button id="tomatoes" class="cover-bg">Tomatoes</button></li>
-          <li><button id="olives" class="cover-bg">Olives</button></li>
-          <li><button id="mushrooms" class="cover-bg">Mushrooms</button></li>
-          <li><button id="pineapple" class="cover-bg">Pineapple!</button></li>
+      <ul id="toppings-menu">
+         
       </ul>
   </div>
   <div class="pizza-wrapper">
-      <div class="pizza"></div>
+      <h2 id="pizza-title"></h3>
+      <div id="pizza"></div>
   </div>
   <script src="js/pizza.js"></script>
 </body>
