--- a/pizza.html
+++ b/pizza.html
@@ -24,6 +24,16 @@
       <h2 id="pizza-title"></h3>
       <div id="pizza"></div>
   </div>
+  <div id="modal-wrapper" style="display:none;">
+      <div class="modal">
+        <span class="close-btn clickable">X</span>
+        <div class="modal-title">Modal Title</div>
+        <div class="modal-content">Please enter Pizza name: <input type="text" id="pizza-name" /></div>
+        <br>
+        <button>Cancel</button>
+        <button>OK</button>
+      </div>
+  </div>
   <script src="js/pizza.js"></script>
 </body>
 </html>
