--- a/pizza.html
+++ b/pizza.html
@@ -17,7 +17,10 @@
       </ul>
       <h3 class="menu-title">Toppings</h3>
       <ul id="toppings-menu">
-         
+        <li><button id="tomatoes" class="cover-bg">Tomatoes</button></li>
+        <li><button id="olives" class="cover-bg">Olives</button></li>
+        <li><button id="mushrooms" class="cover-bg">Mushrooms</button></li>
+        <li><button id="pineapple" class="cover-bg">Pineapple!</button></li>
       </ul>
   </div>
   <div class="pizza-wrapper">
@@ -31,7 +34,7 @@
         <div class="modal-content">Please enter Pizza name: <input type="text" id="pizza-name" /></div>
         <br>
         <button>Cancel</button>
-        <button>OK</button>
+        <button class="ok-btn">OK</button>
       </div>
   </div>
   <script src="js/pizza.js"></script>
